<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="measurements">Measurements</string>
    <string name="total_measurements">Total Measurements</string>
    <string name="average_down">Average Down</string>
    <string name="average_up">Average Up</string>
    <string name="average_latency">Average Latency</string>
    <string name="open_location_permission_dialog_label_location_not_permitted">Nkom Nettfart is not allowed to use your location. Would you like to allow Nkom Nettfart to use your location?</string>
    <string name="notification_test_title">Nkom Nettfart is running</string>
    <string name="notification_signal_test_text">Nkom Nettfart signal measurement is running in the background</string>
    <string name="text_loop_instruction_1">The loop mode option for technically interested users allows the automatic repetition of Nkom Nettfart. The first test starts right after activation of the loop-modus; further tests are carried out when either the waiting time has elapsed or the specified distance has been covered. Tests will be performed until the configured number of tests has been reached. The signal strength is measured continuously, also between two tests. The loop-modus can be stopped at any time respectively it stops after 48 hours. It needs to be explicitly pointed out that due to the loop mode it cannot be excluded that the tester is identified.</string>
    <string name="loop_mode_finished">Nkom Nettfart loop mode finished!</string>
    <string name="text_terms_agree">I agree with Specure’s privacy policy and terms of use for Nkom Nettfart.</string>
    <string name="text_home_run">Run Speed Measurement</string>
    <string name="text_basic_measurement">Speed measurement</string>
    <string name="basic_result_title">Basic Result</string>
    <string name="test_bottom_test_status_jitter">Jitter</string>
    <string name="test_packet_loss">Packet loss</string>
    <string name="menu_button_title_page">Home</string>
    <string name="menu_button_history">History</string>
    <string name="menu_button_statistics">Statistics</string>
    <string name="menu_button_map">Map</string>
    <string name="dialog_title_error">Error</string>
    <string name="error_unknown">Poor connection. Please try again later</string>
    <string name="no_internet_connection_not_load_data">No Internet connection. Could not load data.</string>
    <string name="request_failure">An error occurred while retrieving the data.</string>
    <string name="home_attention">Attention</string>
    <string name="home_no_internet_connection">No Internet connection!</string>
    <string name="home_no_internet_connection_details">No test is possible.</string>
    <string name="home_signal_value">%1$d dBm</string>
    <string name="home_wifi">WLAN</string>
    <string name="public_ip_address">Public address</string>
    <string name="private_ip_address">Private address</string>
    <string name="preferences_information">Information</string>
    <string name="options">Settings</string>
    <string name="preferences_general_settings">General</string>
    <string name="preferences_terms_of_service">Terms of use</string>
    <string name="preferences_loop_test_count">Number of Measurements</string>
    <string name="loop_mode_clarification">When loop mode is enabled, new tests are automatically performed after the configured waiting time or when the device moves more than the configured distance.</string>
    <string name="preferences_privacy">Privacy</string>
    <string name="preferences_persistent_clientUUID">Persistent Client UUID</string>
    <string name="preferences_persistent_clientUUID_summary">Persistent Client UUID is needed to enable measurement history and synchronisation of the results between devices</string>
    <string name="preferences_analytics">Analytics</string>
    <string name="preferences_analytics_summary">Enable analytics and send crash traces to us</string>
    <string name="preferences_location_summary">Manage the permissions regarding the location tracking</string>
    <string name="preferences_loop_test_number">Select the number of tests</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_qos_measurement">QoS measurement</string>
    <string name="preferences_location">Location</string>
    <string name="preferences_loop_mode">Loop mode</string>
    <string name="preferences_loop_mode_summary">New test after waiting time or covering the distance. Max. 2 days</string>
    <string name="preferences_loop_mode_min_delay">Waiting time (in minutes)</string>
    <string name="preferences_loop_mode_max_movement">Distance (in meters)</string>
    <string name="preferences_expert_mode">Expert mode</string>
    <string name="preferences_expert_mode_summary">Show advanced settings and information</string>
    <string name="preferences_ipv4_only">IPv4 only</string>
    <string name="preferences_ipv4_only_sum">Do not use IPv6</string>
    <string name="preferences_radio_info">Radio info</string>
    <string name="preferences_radio_info_sum">Details on radio configuration</string>
    <string name="preferences_client_uuid">Client UUID</string>
    <string name="preferences_about">About</string>
    <string name="preferences_data_protection">Privacy policy</string>
    <string name="preferences_enter_code">Please enter the code</string>
    <string name="preferences_developer_control_server">Control server</string>
    <string name="preferences_override_control_server">Override control server</string>
    <string name="preferences_override_control_server_sum">Activate custom control server settings</string>
    <string name="preferences_override_control_server_host">Control host</string>
    <string name="preferences_override_control_server_port">Control port</string>
    <string name="preferences_override_control_server_ssl">Control SSL</string>
    <string name="preferences_override_control_server_ssl_sum">Use encrypted connection to control server</string>
    <string name="preferences_developer_options_disabled">Developer options disabled</string>
    <string name="preferences_developer_options_available">Developer options available</string>
    <string name="preferences_developer_try_again">Try again!</string>
    <string name="preferences_developer_map_server">Map server</string>
    <string name="preferences_developer_map_override">Override map server</string>
    <string name="preferences_developer_map_override_sum">Activate custom map server settings</string>
    <string name="preferences_developer_map_host">Map host</string>
    <string name="preferences_developer_map_port">Map port</string>
    <string name="preferences_developer_map_ssl">Map server SSL</string>
    <string name="preferences_developer_map_ssl_sum">Use encrypted connection to map server</string>
    <string name="preferences_category_developer_qos_server">QoS server</string>
    <string name="preferences_developer_qos_ssl">QoS server SSL</string>
    <string name="preferences_developer_qos_ssl_sum">Use encrypted connection to QoS server</string>
    <string name="preferences_all_disabled">Deactivated.</string>
    <string name="preferences_server_selection">Server selection</string>
    <string name="preferences_default_server_selection" />
    <string name="label_server_selection">Server selection</string>
    <string name="preferences_tag">Tag</string>
    <string name="location_dialog_label_title">Location</string>
    <string name="location_dialog_label_position">Position</string>
    <string name="location_dialog_label_accuracy">Accuracy</string>
    <string name="location_dialog_label_age">Age</string>
    <string name="location_dialog_label_source">Source</string>
    <string name="location_dialog_label_altitude">Altitude</string>
    <string name="location_dialog_label_satellites">Satellites</string>
    <string name="open_gps_setting_dialog_label_gps_not_enabled">Location services are not enabled. Would you like to modify location settings?</string>
    <string name="open_gps_setting_dialog_label_open_gps_setting">Open location settings</string>
    <string name="open_gps_setting_dialog_label_cancel">Cancel</string>
    <string name="location_dialog_age">%1$s s</string>
    <string name="location_dialog_accuracy">%1$s m</string>
    <string name="location_location_direction_n">N %1$s</string>
    <string name="location_location_direction_e">E %1$s</string>
    <string name="location_location_direction_s">S %1$s</string>
    <string name="location_location_direction_w">W %1$s</string>
    <string name="open_location_permission_dialog_label_open_permission_setting">Open application settings</string>
    <string name="text_ip_address_not_available">Address is not available</string>
    <string name="input_setting_dialog_ok">OK</string>
    <string name="input_setting_dialog_cancel">Cancel</string>
    <string name="loop_mode_max_delay_invalid" tools:ignore="PluralsCandidate">Please choose a number between %1$d and %2$d.</string>
    <string name="about_client_uuid_copied">Client UUID has been copied to clipboard.</string>
    <string name="client_not_registered">App is not registered, try again later.</string>
    <string name="measurement_ping_value">%1$s</string>
    <string name="measurement_ping_value_1f">%1$.1f</string>
    <string name="measurement_download_upload_speed">%1$s</string>
    <string name="measurement_download">Download</string>
    <string name="measurement_upload">Upload</string>
    <string name="measurement_dash">-</string>
    <string name="measurement_speed_chart_x_label_min">0s</string>
    <string name="measurement_speed_chart_x_label_max">8s</string>
    <string name="measurement_ping">Ping</string>
    <string name="measurement_down">Down</string>
    <string name="measurement_up">Up</string>
    <string name="measurement_qos">Quality of service (QoS)</string>
    <string name="measurement_qos_web_site">Web site</string>
    <string name="measurement_qos_transparent_connection">Transparent connection</string>
    <string name="measurement_qos_dns">DNS</string>
    <string name="measurement_qos_tcp_ports">TCP ports</string>
    <string name="measurement_qos_udp_ports">UDP ports</string>
    <string name="measurement_qos_unmodified_content">Unmodified content</string>
    <string name="measurement_qos_traceroute">Traceroute</string>
    <string name="measurement_qos_voip">VoIP</string>
    <string-array name="measurement_speed_chart_y_labels">
        <item>1</item>
        <item>10</item>
        <item>100</item>
        <item>1000</item>
    </string-array>
    <string name="label_qos">QoS</string>
    <string name="label_upload">Upload</string>
    <string name="label_download">Download</string>
    <string name="label_ping">Ping</string>
    <string name="label_init">Init</string>
    <string name="loop_continue_to_results">Continue to the result</string>
    <string name="loop_run_again">Run again</string>
    <string name="median">Median</string>
    <string name="title_permissions_welcome">Welcome to Nkom Nettfart</string>
    <string name="text_permissions_welcome">Let’s Review your Privacy Options</string>
    <string name="button_next">Next</string>
    <string name="label_results">Results</string>
    <string name="text_link_history_empty">Make your first measurement</string>
    <string name="text_history_empty">No results to show.</string>
    <string name="measurement">Measurement</string>
    <string name="label_measurement_ping_ms">Ping (ms)</string>
    <string name="label_measurement_download_mbps">Download (Mbps)</string>
    <string name="label_measurement_upload_mbps">Upload (Mbps)</string>
    <string name="label_measurement_qos">QoS (%)</string>
    <string name="text_no_persistent_client_uuid">Nettfart needs certain permissions to operate correctly</string>
    <string name="text_link_no_persistent_client_uuid">Go to privacy permissions</string>
</resources>