<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/measurement_bottom_background"
        android:padding="@dimen/padding_large"
        tools:context="at.rtr.rmbt.android.ui.activity.LoopFinishedActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:src="@drawable/ic_loop_finished_art"
            app:layout_constraintBottom_toTopOf="@+id/loopFinishedTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loopFinishedTitle"
            style="@style/AttenNewMediumStyle.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/loop_mode_finished"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonGoToResults"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGoToResults"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/button_green_background"
            android:text="@string/loop_continue_to_results"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonRunAgain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loopFinishedTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRunAgain"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/button_gray_background"
            android:text="@string/loop_run_again"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonGoToResults" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>